Corregir el tamaño del texto del formulario para que sea el mismo

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -98,7 +98,7 @@ input[type="radio"]:checked + label {
    }
    .form-section input[placeholder],
    .form-section select {
-      font-size: 1.1rem;
+      font-size: 18px;
       padding: 0.5rem 0 0.1rem;
    }
    .form-check label {
