--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -98,7 +98,7 @@ input[type="radio"]:checked + label {
    }
    .form-section input[placeholder],
    .form-section select {
-      font-size: 18px;
+      font-size: 1.25rem;
       padding: 0.5rem 0 0.1rem;
    }
    .form-check label {
@@ -142,6 +142,7 @@ input[type="radio"]:checked + label {
    .form-section input,
    .form-section select {
       width: 26vw;
+      font-size: 1.25rem;
    }
    .form-btn-budget {
       padding: 0.15rem 1rem;
